--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -56,13 +56,13 @@ jobs:
         fetch-depth: 0
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ env.GO_VERSION }}
         cache: true
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
         cache: 'pip'
@@ -127,11 +127,13 @@ jobs:
           HIGH_ISSUES=$(jq -r '.summary.high_issues' security-check-report.json)
           FAILED_CHECKS=$(jq -r '.statistics.failed_checks' security-check-report.json)
 
-          echo "overall_status=$OVERALL_STATUS" >> $GITHUB_OUTPUT
-          echo "total_issues=$TOTAL_ISSUES" >> $GITHUB_OUTPUT
-          echo "critical_issues=$CRITICAL_ISSUES" >> $GITHUB_OUTPUT
-          echo "high_issues=$HIGH_ISSUES" >> $GITHUB_OUTPUT
-          echo "failed_checks=$FAILED_CHECKS" >> $GITHUB_OUTPUT
+          cat >> $GITHUB_OUTPUT << EOF
+overall_status=$OVERALL_STATUS
+total_issues=$TOTAL_ISSUES
+critical_issues=$CRITICAL_ISSUES
+high_issues=$HIGH_ISSUES
+failed_checks=$FAILED_CHECKS
+EOF
 
           # Create summary for step output
           echo "## Security Scan Results" >> $GITHUB_STEP_SUMMARY
@@ -147,7 +149,7 @@ jobs:
 
     - name: Comment on PR with security results
       if: github.event_name == 'pull_request' && always()
-      uses: actions/github-script@v6
+      uses: actions/github-script@v7
       with:
         script: |
           const fs = require('fs');
@@ -247,7 +249,7 @@ jobs:
 
     - name: Create security issue on failure
       if: steps.parse-report.outputs.overall_status == 'FAILED' && github.event_name == 'push' && github.ref == 'refs/heads/main'
-      uses: actions/github-script@v6
+      uses: actions/github-script@v7
       with:
         script: |
           const fs = require('fs');
@@ -308,7 +310,7 @@ jobs:
 
     - name: Upload to GitHub Security tab
       if: steps.parse-report.outputs.overall_status == 'FAILED' || steps.parse-report.outputs.critical_issues != '0'
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: security-check.sarif
         category: security-compliance
@@ -441,7 +443,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ env.GO_VERSION }}
 
@@ -486,7 +488,7 @@ jobs:
       continue-on-error: true
 
     - name: Upload Trivy scan results
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       if: always()
       with:
         sarif_file: 'trivy-results.sarif'
