--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.24.7'
+        go-version: '1.23.6'
         cache: true
         cache-dependency-path: |
           go.sum
@@ -124,7 +124,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.24.7'
+        go-version: '1.23.6'
 
     - name: Configure Git for Go modules
       run: |
@@ -276,6 +276,7 @@ jobs:
     timeout-minutes: 60
 
     strategy:
+      fail-fast: false
       matrix:
         component:
           - orchestrator
@@ -313,10 +314,14 @@ jobs:
         platforms: linux/amd64
         provenance: false
         sbom: false
+        build-args: |
+          BUILDKIT_INLINE_CACHE=1
       timeout-minutes: 30
+      continue-on-error: true
 
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@0.24.0
+      if: steps.build.outcome == 'success'
       with:
         image-ref: local/oran-${{ matrix.component }}:scan
         format: 'sarif'
@@ -329,6 +334,7 @@ jobs:
         skip-db-update: false
         skip-java-db-update: false
       timeout-minutes: 15
+      continue-on-error: true
 
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v3
@@ -341,6 +347,7 @@ jobs:
 
     - name: Run Grype vulnerability scanner
       uses: anchore/scan-action@v4
+      if: steps.build.outcome == 'success'
       id: grype-scan
       with:
         image: local/oran-${{ matrix.component }}:scan
@@ -349,6 +356,7 @@ jobs:
         output-format: sarif
         add-cpes-if-none: true
       timeout-minutes: 15
+      continue-on-error: true
 
     - name: Upload Grype scan results
       uses: github/codeql-action/upload-sarif@v3
@@ -361,6 +369,7 @@ jobs:
 
     - name: Run Snyk container scan
       uses: snyk/actions/docker@0.4.0
+      if: steps.build.outcome == 'success'
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
@@ -397,6 +406,7 @@ jobs:
         echo "" >> container-scan-summary.md
         echo "- **Image**: local/oran-${{ matrix.component }}:scan" >> container-scan-summary.md
         echo "- **Build Status**: ${{ steps.build.outcome }}" >> container-scan-summary.md
+        echo "- **Build Conclusion**: ${{ steps.build.conclusion }}" >> container-scan-summary.md
         echo "- **Scan Date**: $(date -u +"%Y-%m-%d %H:%M:%S UTC")" >> container-scan-summary.md
         echo "" >> container-scan-summary.md
 
@@ -711,7 +721,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.24.7'
+        go-version: '1.23.6'
 
     - name: Configure Git for Go modules
       run: |
@@ -1019,7 +1029,7 @@ jobs:
     name: Security Incident Response
     runs-on: ubuntu-latest
     needs: [codeql, dependency-scan, container-scan, secrets-scan]
-    if: failure() && (needs.codeql.result == 'failure' || needs.dependency-scan.result == 'failure' || needs.container-scan.result == 'failure' || needs.secrets-scan.result == 'failure')
+    if: failure() && (needs.codeql.result == 'failure' || needs.dependency-scan.result == 'failure' || needs.secrets-scan.result == 'failure')
 
     steps:
     - name: Log security alert
